# controllers/usersController.js
@@ -17,6 +17,7 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
+  // #swagger.tags = ['Users']
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDatabase()
@@ -32,8 +33,8 @@ const createUser = async (req, res) => {
   // #swagger.tags = ['Users']
   try {
     const user = {
-      firstName: req.body.firstName,
-      lastName: req.body.lastName,
+      email: req.body.email,
+      username: req.body.username,
       favoriteColor: req.body.favoriteColor,
       birthday: req.body.birthday
     };
@@ -57,10 +58,10 @@ const updateUser = async (req, res) => {
   // #swagger.tags = ['Users']
   const userId = new ObjectId(req.params.id);
   const user = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    favoriteColor: req.body. favoriteColor,
-    birthday: req.body.birthday
+      email: req.body.email,
+      username: req.body.username,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday
   };
   const response = await mongodb.getDatabase().collection('users').replaceOne({_id: userId}, user);
   if(response.modifiedCount > 0){
