# routes/swagger.js
@@ -1,6 +1,8 @@
 const router = require("express").Router();
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("../swagger.json");
-router.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+router.use("/api-docs", swaggerUi.serve);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
